<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pointout</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="default_label">Can you point out a good</string>
    <string name="default_check_label">Your Responses Bag</string>
	<string name="default_askingFor">Saloon</string>
	<string name="default_nearField">Hyderabad</string>
	<string name="tab1_label">Ask</string>
	<string name="tab2_label">Check</string>
	<string name="near_label">Near</string>
	<string name="addphone">Add Phone numbers</string>
	<string name="addemail">Add E-mails</string>
	<string name="ask_button">Ask</string>
	<string name="contact_label">Contacts</string>
</resources>
